// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsCard should render correctly 1`] = `
<DocumentFragment>
  .c0 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-green-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  width: 100%;
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`StatsCard should render correctly with link 1`] = `
<DocumentFragment>
  .c0 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-green-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  width: 100%;
}

.c2 {
  opacity: 0.7;
  color: var(--acx-primary-white);
  cursor: pointer;
  font-size: var(--acx-subtitle-6-font-size);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
  line-height: var(--acx-subtitle-6-line-height);
  border-bottom: 1px dotted var(--acx-primary-white);
  padding: 10px 0px 0px 0px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      (More details)
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatsCard should render correctly with title 1`] = `
<DocumentFragment>
  .c0 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-red-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  color: var(--acx-primary-white);
  font-size: var(--acx-headline-5-font-size);
  font-weight: var(--acx-headline-5-font-weight-bold);
  padding: 5px 0px 10px 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  width: 100%;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Title
    </div>
    <div
      class="c2"
    />
  </div>
</DocumentFragment>
`;

exports[`StatsCard should render correctly with title and link 1`] = `
<DocumentFragment>
  .c0 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-green-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  color: var(--acx-primary-white);
  font-size: var(--acx-headline-5-font-size);
  font-weight: var(--acx-headline-5-font-weight-bold);
  padding: 5px 0px 10px 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  width: 100%;
}

.c3 {
  opacity: 0.7;
  color: var(--acx-primary-white);
  cursor: pointer;
  font-size: var(--acx-subtitle-6-font-size);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
  line-height: var(--acx-subtitle-6-line-height);
  border-bottom: 1px dotted var(--acx-primary-white);
  padding: 10px 0px 0px 0px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Title
    </div>
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      (More details)
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatsCard should render correctly with title and link and 2 values and divider 1`] = `
<DocumentFragment>
  .c0 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-green-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  color: var(--acx-primary-white);
  font-size: var(--acx-headline-5-font-size);
  font-weight: var(--acx-headline-5-font-weight-bold);
  padding: 5px 0px 10px 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  width: 100%;
}

.c5 {
  opacity: 0.7;
  color: var(--acx-primary-white);
  cursor: pointer;
  font-size: var(--acx-subtitle-6-font-size);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
  line-height: var(--acx-subtitle-6-line-height);
  border-bottom: 1px dotted var(--acx-primary-white);
  padding: 10px 0px 0px 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c3 .ant-statistic-title {
  color: var(--acx-primary-white);
  font-size: var(--acx-body-4-font-size);
  min-height: 24px;
  margin-bottom: 0px;
  padding: 0px 5px;
}

.c3 .ant-statistic-content {
  color: var(--acx-primary-white);
}

.c3 .ant-statistic-content .ant-statistic-content-value {
  font-size: 28px;
  font-weight: var(--acx-body-font-weight-bold);
}

.c3 .ant-statistic-content .ant-statistic-content-suffix {
  font-size: var(--acx-body-3-font-size);
}

.c4 {
  background-color: var(--acx-primary-white);
  height: 95%;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Title
    </div>
    <div
      class="c2"
    >
      <div
        class="ant-statistic c3"
        style="width: 50%;"
      >
        <div
          class="ant-statistic-title"
        >
          Value 1
        </div>
        <div
          class="ant-statistic-content"
        >
          <span
            class="ant-statistic-content-value"
          >
            <span
              class="ant-statistic-content-value-int"
            >
              10
            </span>
          </span>
          <span
            class="ant-statistic-content-suffix"
          >
            suffix1
          </span>
        </div>
      </div>
      <div
        class="ant-divider ant-divider-vertical c4"
        role="separator"
      />
      <div
        class="ant-statistic c3"
        style="width: 50%;"
      >
        <div
          class="ant-statistic-title"
        >
          Value 2
        </div>
        <div
          class="ant-statistic-content"
        >
          <span
            class="ant-statistic-content-value"
          >
            <span
              class="ant-statistic-content-value-int"
            >
              20
            </span>
          </span>
          <span
            class="ant-statistic-content-suffix"
          >
            suffix2
          </span>
        </div>
      </div>
    </div>
    <div
      class="c5"
    >
      (More details)
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatsCard should render correctly with title and link and isOpen 1`] = `
<DocumentFragment>
  .c0 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-green-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  color: var(--acx-primary-white);
  font-size: var(--acx-headline-5-font-size);
  font-weight: var(--acx-headline-5-font-weight-bold);
  padding: 5px 0px 10px 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  width: 100%;
}

.c3 {
  opacity: 0.7;
  color: var(--acx-primary-white);
  cursor: auto;
  font-size: var(--acx-subtitle-6-font-size);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
  line-height: var(--acx-subtitle-6-line-height);
  border-bottom: 1px dotted var(--acx-primary-white);
  padding: 10px 0px 0px 0px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Title
    </div>
    <div
      class="c2"
    />
    <div
      class="c3"
    >
      (More details)
    </div>
  </div>
</DocumentFragment>
`;

exports[`StatsCard should render correctly with title and link and values 1`] = `
<DocumentFragment>
  .c0 {
  border: 0;
  padding-block: 10px;
  background: var(--acx-semantics-green-50);
  border-radius: 3px;
  height: 100%;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  color: var(--acx-primary-white);
  font-size: var(--acx-headline-5-font-size);
  font-weight: var(--acx-headline-5-font-weight-bold);
  padding: 5px 0px 10px 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  width: 100%;
}

.c4 {
  opacity: 0.7;
  color: var(--acx-primary-white);
  cursor: pointer;
  font-size: var(--acx-subtitle-6-font-size);
  font-weight: var(--acx-subtitle-6-font-weight-bold);
  line-height: var(--acx-subtitle-6-line-height);
  border-bottom: 1px dotted var(--acx-primary-white);
  padding: 10px 0px 0px 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c3 .ant-statistic-title {
  color: var(--acx-primary-white);
  font-size: var(--acx-body-4-font-size);
  min-height: 0px;
  margin-bottom: 0px;
  padding: 0px 5px;
}

.c3 .ant-statistic-content {
  color: var(--acx-primary-white);
}

.c3 .ant-statistic-content .ant-statistic-content-value {
  font-size: 28px;
  font-weight: var(--acx-body-font-weight-bold);
}

.c3 .ant-statistic-content .ant-statistic-content-suffix {
  font-size: var(--acx-body-3-font-size);
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Title
    </div>
    <div
      class="c2"
    >
      <div
        class="ant-statistic c3"
        style="width: 100%;"
      >
        <div
          class="ant-statistic-title"
        >
          Value 1
        </div>
        <div
          class="ant-statistic-content"
        >
          <span
            class="ant-statistic-content-value"
          >
            <span
              class="ant-statistic-content-value-int"
            >
              10
            </span>
          </span>
          <span
            class="ant-statistic-content-suffix"
          >
            suffix1
          </span>
        </div>
      </div>
    </div>
    <div
      class="c4"
    >
      (More details)
    </div>
  </div>
</DocumentFragment>
`;
